pdf to png convert code

--- a/docx_to_pdf.ipynb
+++ b/docx_to_pdf.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\__APP__\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import os\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +53,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "for folder in glob.glob('*/'):\n",
     "    for file in glob.glob(folder+'*.docx'):\n",
-    "        print(file)\n",
+    "        if '_' in file:\n",
+    "            continue\n",
+    "        # print(file)\n",
     "        # convert(file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pdf2image import convert_from_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert example:\n",
+    "```python\n",
+    "images = convert_from_path('desserts/Banana Bread.pdf')\n",
+    "# images is a list of PIL images (one per page)\n",
+    "for i,image in enumerate(images):\n",
+    "    image.save(f'desserts/Banana Bread{i}.pdf')\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = convert_from_path('desserts/Banana Bread.pdf')\n",
+    "images[0].save('desserts/Banana Bread.png', 'PNG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
