convert all pdf to png code

--- a/docx_to_pdf.ipynb
+++ b/docx_to_pdf.ipynb
@@ -103,7 +103,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "for folder in glob.glob('*/'):\n",
+    "    for file in glob.glob(folder+'*.pdf'):\n",
+    "        if '_' in file:\n",
+    "            continue\n",
+    "        print(file)\n",
+    "        images = convert_from_path(file)\n",
+    "        images[0].save(file.replace('.pdf', '.png'), 'PNG')\n"
    ]
   }
  ],
