adapted code to folders types

--- a/docx_to_pdf.ipynb
+++ b/docx_to_pdf.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\__APP__\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import os\n",
@@ -35,8 +26,8 @@
    "source": [
     "Convert example:\n",
     "```python\n",
-    "in_file = \"starters/Canneles Pesto Parmesan.docx\"\n",
-    "out_file = \"starters/Canneles Pesto Parmesan.pdf\"\n",
+    "in_file = \"DOCX/starters/Canneles Pesto Parmesan.docx\"\n",
+    "out_file = \"PDF/starters/Canneles Pesto Parmesan.pdf\"\n",
     "\n",
     "convert(in_file, out_file)\n",
     "```"
@@ -44,30 +35,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert(\"desserts/Banana Bread.docx\", \"desserts/Banana Bread.pdf\")"
+    "# convert(\"DOCX/desserts/Banana Bread.docx\", \"PDF/desserts/Banana Bread.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for folder in glob.glob('*/'):\n",
+    "for folder in glob.glob('DOCX\\\\*\\\\'):\n",
+    "    sub_folder = folder.split('\\\\')[1]\n",
     "    for file in glob.glob(folder+'*.docx'):\n",
-    "        if '_' in file:\n",
+    "        if '\\\\_' in file:\n",
     "            continue\n",
-    "        # print(file)\n",
-    "        # convert(file)\n"
+    "        new_file = file.replace('.docx', '.pdf').replace('DOCX', 'PDF')\n",
+    "        print(file)\n",
+    "        print(new_file)\n",
+    "        # convert(file, new_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the library \"pdf2image\" (https://pypi.org/project/pdf2image/)\n",
+    "\n",
+    "`pip install pdf2image`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,21 +90,11 @@
    "source": [
     "Convert example:\n",
     "```python\n",
-    "images = convert_from_path('desserts/Banana Bread.pdf')\n",
+    "images = convert_from_path('PDF/desserts/Banana Bread.pdf')\n",
     "# images is a list of PIL images (one per page)\n",
     "for i,image in enumerate(images):\n",
-    "    image.save(f'desserts/Banana Bread{i}.pdf')\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images = convert_from_path('desserts/Banana Bread.pdf')\n",
-    "images[0].save('desserts/Banana Bread.png', 'PNG')"
+    "    image.save(f'PNG/desserts/Banana Bread{i}.pdf')\n",
+    "```"
    ]
   },
   {
@@ -103,13 +103,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for folder in glob.glob('*/'):\n",
+    "images = convert_from_path('PDF/desserts/Banana Bread.pdf')\n",
+    "images[0].save('PNG/desserts/Banana Bread.png', 'PNG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for folder in glob.glob('PDF\\\\*\\\\'):\n",
+    "    sub_folder = folder.split('\\\\')[1]\n",
     "    for file in glob.glob(folder+'*.pdf'):\n",
-    "        if '_' in file:\n",
+    "        if '\\\\_' in file:\n",
     "            continue\n",
+    "        new_file = file.replace('.pdf', '.png').replace('PDF', 'PNG')\n",
     "        print(file)\n",
-    "        images = convert_from_path(file)\n",
-    "        images[0].save(file.replace('.pdf', '.png'), 'PNG')\n"
+    "        print(new_file)\n",
+    "        # images = convert_from_path(file)\n",
+    "        # images[0].save(new_file, 'PNG')\n"
    ]
   }
  ],
