adapted building tool

--- a/docx_to_pdf_to_png.ipynb
+++ b/docx_to_pdf_to_png.ipynb
@@ -142,6 +142,8 @@
       "PDF\\desserts\\Tiramisu Classique.pdf\n",
       "DOCX\\desserts\\Tuiles aux Amandes.docx\n",
       "PDF\\desserts\\Tuiles aux Amandes.pdf\n",
+      "DOCX\\desserts\\~$che de Noël de Mémée.docx\n",
+      "PDF\\desserts\\~$che de Noël de Mémée.pdf\n",
       "DOCX\\ice_creams\\Crème Glacée Banane.docx\n",
       "PDF\\ice_creams\\Crème Glacée Banane.pdf\n",
       "DOCX\\ice_creams\\Crème Glacée Vanille.docx\n",
@@ -742,17 +744,24 @@
     "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
     "    <title>Yo! Recipes!</title>\n",
     "    <style>\n",
+    "        @font-face {\n",
+    "            font-family: monotypeCorsiva;\n",
+    "            src: url(../../monotype-corsiva.ttf);\n",
+    "        }\n",
+    "\n",
     "        body {\n",
     "            display: flex;\n",
     "            align-items: center;\n",
     "            flex-direction: column;\n",
     "            margin: 0;\n",
     "            padding: 0;\n",
+    "            font-family: monotypeCorsiva;\n",
     "        }\n",
     "\n",
     "        h1 {\n",
     "            text-align: center;\n",
     "            color: #333;\n",
+    "            font-size: 3em;\n",
     "        }\n",
     "\n",
     "        .icon {\n",
