--- a/docx_to_pdf_to_png.ipynb
+++ b/docx_to_pdf_to_png.ipynb
@@ -761,7 +761,7 @@
     "        h1 {\n",
     "            text-align: center;\n",
     "            color: #333;\n",
-    "            font-size: 3em;\n",
+    "            margin: 0.2em 0 0 0;\n",
     "        }\n",
     "\n",
     "        .icon {\n",
