adapted building script

--- a/docx_to_pdf_to_png.ipynb
+++ b/docx_to_pdf_to_png.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -749,6 +749,20 @@
     "            src: url(../../monotype-corsiva.ttf);\n",
     "        }\n",
     "\n",
+    "        #back-button {\n",
+    "            display: inline-block;\n",
+    "            padding: 0.25em 0.5em;\n",
+    "            margin: 0.1em;\n",
+    "            background-color: #ccc;\n",
+    "            border-radius: 0.5em;\n",
+    "            cursor: pointer;\n",
+    "            user-select: none;\n",
+    "            font-weight: bold;\n",
+    "            font-size: 1.1em;\n",
+    "            text-decoration: none;\n",
+    "            user-select: none;\n",
+    "        }\n",
+    "\n",
     "        body {\n",
     "            display: flex;\n",
     "            align-items: center;\n",
@@ -761,7 +775,6 @@
     "        h1 {\n",
     "            text-align: center;\n",
     "            color: #333;\n",
-    "            margin: 0.2em 0 0 0;\n",
     "        }\n",
     "\n",
     "        .icon {\n",
@@ -771,15 +784,17 @@
     "        }\n",
     "\n",
     "        .recipe-image {\n",
-    "            width: 80%;\n",
+    "            width: 99%;\n",
     "            max-width: 750px;\n",
-    "            margin: 0 5px;\n",
+    "            margin: 1em 10px;\n",
+    "            box-shadow: #666 0 0 10px;\n",
     "        }\n",
     "    </style>\n",
     "</head>\n",
     "\n",
     "<body>\n",
-    "\n",
+    "    <!-- <a href=\"../../index.html\" id=\"back-button\">← Back  ↺</a> -->\n",
+    "    <a href=\"../../index.html\" id=\"back-button\">Back to List</a>\n",
     "    <h1>Yo! Recipes!</h1>\n",
     "    <div>\n",
     "        <a href=\"../../''' + file_png + '''\"><img src=\"../../logo_png.svg\" alt=\"png file\" class=\"icon\"></a>\n",
