added build script part

--- a/docx_to_pdf_to_png_to_html.ipynb
+++ b/docx_to_pdf_to_png_to_html.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1719765865\n"
+      "1719766382\n"
      ]
     }
    ],
@@ -189,9 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print()"
    ]
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,13 +315,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "f = open('last_update_timestamp.txt', 'w')\n",
     "f.write(str(int(time.time())))\n",
     "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unidecode import unidecode\n",
+    "\n",
+    "file_top = open('index_top.html', 'r')\n",
+    "top_html = file_top.read()\n",
+    "file_top.close()\n",
+    "\n",
+    "file_bottom = open('index_bottom.html', 'r')\n",
+    "bottom_html = file_bottom.read()\n",
+    "file_bottom.close()\n",
+    "\n",
+    "file_build = open('index.html', 'w')\n",
+    "file_build.write(top_html + '\\n')\n",
+    "\n",
+    "lines = []\n",
+    "for folder in glob.glob('HTML\\\\*\\\\'):\n",
+    "    folder_class = folder.replace('_', '-').replace('\\\\', '').replace('HTML', '')\n",
+    "    for file in glob.glob(folder+'*.html'):\n",
+    "        name = file.split('\\\\')[2].split('.')[0]\n",
+    "        redirect = file.replace(\"\\\\\", \"/\")\n",
+    "        if name[0] == '_':\n",
+    "            continue\n",
+    "        lines.append( (unidecode(name), f'        <li class=\"recipe {folder_class}\"><a href=\"{redirect}\">{name}</a></li>\\n') )\n",
+    "\n",
+    "lines.sort()\n",
+    "for line in lines:\n",
+    "    file_build.write(line[1])\n",
+    "\n",
+    "file_build.write(bottom_html)\n",
+    "file_build.close()\n"
    ]
   }
  ],
