specified encoding in nb as well

--- a/build_all_nb.ipynb
+++ b/build_all_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1719766382\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "last_modified_timestamp = 0\n",
     "f = open('last_update_timestamp.txt', 'r')\n",
@@ -43,18 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\__APP__\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from docx2pdf import convert"
@@ -75,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print()"
    ]
@@ -137,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print()"
    ]
@@ -213,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +269,7 @@
     "\n",
     "\n",
     "</html>'''\n",
-    "            with open(new_file, 'w') as f:\n",
+    "            with open(new_file, 'w', encoding='UTF8') as f:\n",
     "                f.write(txt)"
    ]
   },
@@ -315,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,21 +300,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from unidecode import unidecode\n",
     "\n",
-    "file_top = open('index_top.html', 'r')\n",
+    "file_top = open('index_top.html', 'r', encoding='UTF8')\n",
     "top_html = file_top.read()\n",
     "file_top.close()\n",
     "\n",
-    "file_bottom = open('index_bottom.html', 'r')\n",
+    "file_bottom = open('index_bottom.html', 'r', encoding='UTF8')\n",
     "bottom_html = file_bottom.read()\n",
     "file_bottom.close()\n",
     "\n",
-    "file_build = open('index.html', 'w')\n",
+    "file_build = open('index.html', 'w', encoding='UTF8')\n",
     "file_build.write(top_html + '\\n')\n",
     "\n",
     "lines = []\n",
